--- a/css/todo.css
+++ b/css/todo.css
@@ -80,22 +80,25 @@ main {
 
 .task {
 	display: block;
+	padding: 5px ;
+	padding-right: 45px;
 	margin: 5px;
-	padding: 5px;
 	width: 460px;
 	background-color: inherit;
 	border: 1px solid #989898;
 	display: inline-block;
-	padding: 12px;
 	font: inherit;
 	border-radius: 6px;
 	position: relative;
 }
 
+div{
+	min-height: 45px;
+}
+
 form{
 	position:relative;
 }
-
 
 button {
 	padding:10px;
